--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fibjs_server",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "./lib/index.js",
   "types": "./@types/index.d.ts",
@@ -18,5 +18,6 @@
     "@types",
     "src",
     "lib"
-  ]
+  ],
+  "keywords": ["fibjs", "WebServer-Adpater"]
 }
