--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,14 @@
     "watch":false,
     "outDir": "lib/",
     "experimentalDecorators":true,
-    "emitDecoratorMetadata":true
+    "emitDecoratorMetadata":true,
+    "declaration": true,
+    "declarationDir": "@types",
+    "removeComments": false
   },
   "exclude": [
     "lib",
-    "node_modules"
+    "node_modules",
+    "@types"
   ]
 }
